--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"laravel-mix": "^6.0.49",
 		"resolve-url-loader": "^5.0.0",
+		"sass": "^1.93.2",
 		"sass-loader": "^12.6.0"
 	},
 	"dependencies": {
