--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"vue": "^3.5.22"
 	},
 	"dependencies": {
+		"@alpinejs/persist": "^3.15.0",
 		"@floating-ui/dom": "^1.7.4",
 		"alpinejs": "^3.14.9"
 	}
